--- a/styles.css
+++ b/styles.css
@@ -1,109 +1,36 @@
 body{
-    color: white;
-    background-color: black;
+    color: black;
+    background: linear-gradient(135deg, #00001a, #0d0d0d);
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Courier New', Courier, monospace;
+    margin: 0;
 }
 .layout{
     width: fit-content;
     max-width: 90%;
-    padding: 10px;
-    display: grid;
-    grid-template-rows: 6vh 75vh;
-    grid-template-columns: repeat(6, 10vw);
-    column-gap: 10px;
-    row-gap: 20px;
-
-}
-label.button{
-    color: white;
-    display: block;
-    position: relative;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-label input.button{
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-}
-span.button{
-    text-align: center;
-    position: absolute;
-    height: 90%;
-    width: 90%;
-    background-color: transparent;
-    border: 5px solid transparent;
-    border-radius: 30px;
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2vw;
     justify-content: center;
-    align-content: center;
-    font-weight:900;
-    font-size: 1.5vw;
+    align-items: center;
 }
-
-#a1{
-    border: 5px solid transparent;
-    background: linear-gradient(#000, #000) padding-box, linear-gradient(135deg, #f00, #ff8000) border-box;
+.card{
+    width: 20vw;
+    height: 20vw;
+    border-radius: 3vw;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    overflow: hidden;
+    cursor: pointer;
 }
-#a1:hover{
-    color: #000;
-    background: linear-gradient(135deg, #f00, #ff8000) border-box;
+.card:hover{
+    width: 21vw;
+    height: 21vw;
 }
-
-#a2{
-    border: 5px solid transparent;
-    background: linear-gradient(#000, #000) padding-box, linear-gradient(135deg, #ff8000, #ff0) border-box;
-}
-#a2:hover{
-    color: #000;
-    background: linear-gradient(135deg, #ff8000, #ff0) border-box;
-}
-#a3{
-    border: 5px solid transparent;
-    background: linear-gradient(#000, #000) padding-box, linear-gradient(135deg, #ff0, #0f0) border-box;
-}
-#a3:hover{
-    color: #000;
-    background: linear-gradient(135deg, #ff0, #0f0) border-box;
-}
-#a4{
-    border: 5px solid transparent;
-    background: linear-gradient(#000, #000) padding-box, linear-gradient(135deg, #0f0, #00f) border-box;
-}
-#a4:hover{
-    color: #000;
-    background: linear-gradient(135deg, #0f0, #00f) border-box;
-}
-#a5{
-    border: 5px solid transparent;
-    background: linear-gradient(#000, #000) padding-box, linear-gradient(135deg, #00f, #8000ff) border-box;
-}
-#a5:hover{
-    color: #000;
-    background: linear-gradient(135deg, #00f, #8000ff) border-box;
-}
-#a6{
-    border: 5px solid transparent;
-    background: linear-gradient(#000, #000) padding-box, linear-gradient(135deg, #8000ff, #f0f) border-box;
-}
-#a6:hover{
-    color: #000;
-    background: linear-gradient(135deg, #8000ff, #f0f) border-box;
-}
-
-.body{
-    padding: 10px;
-    grid-row-start: 2;
-    grid-column: 1 / span 6;
-
-    border: 5px solid transparent;
-    background: linear-gradient(#000, #000000) padding-box, linear-gradient(135deg, hsl(0, 0%, 75%), hsl(0, 0%, 25%)) border-box;
-    border-radius: 30px;
+img{
+    height: 100%;
 }
