--- a/styles.css
+++ b/styles.css
@@ -8,18 +8,19 @@ body{
     margin: 0;
 }
 .layout{
+    padding: 3vw 0 3vw 0;
     width: fit-content;
     max-width: 90%;
     display: flex;
     flex-wrap: wrap;
-    gap: 2vw;
+    gap: 3vw;
     justify-content: center;
     align-items: center;
 }
 .card{
-    width: 20vw;
-    height: 20vw;
-    border-radius: 3vw;
+    width: 19vw;
+    height: 19vw;
+    border-radius: 2vw;
     background-color: black;
     justify-content: center;
     align-items: center;
@@ -27,10 +28,9 @@ body{
     overflow: hidden;
     cursor: pointer;
 }
-.card:hover{
-    width: 21vw;
-    height: 21vw;
-}
 img{
     height: 100%;
+}
+img:hover{
+    height: 105%;
 }
